--- a/home.html
+++ b/home.html
@@ -2,11 +2,11 @@
 <html>
 <title>Be Healthy Homepage</title>
 <meta charset="UTF-8">
-<link rel="stylesheet" type="text/css" href="homepage.css">
+<link rel="stylesheet" type="text/css" href="../css/homepage.css">
 <body>
 <div class="bgimg" id="top">
   <div class="icn">
-    <a href="#top"><img src="logo.jpg"></a>
+    <a href="#top"><img src="../imgs/logo.jpg"></a>
   </div>
   <div class="menu">
     <a href="#top"><button class="btns">HOME</button></a>
@@ -55,6 +55,6 @@
 </div>
 </div>
  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="transitions.js"></script>
+    <script src="../js/transition.js"></script>
 </body>
 </html>
