--- a/html/problems.html
+++ b/html/problems.html
@@ -8,7 +8,7 @@
       src="https://kit.fontawesome.com/7f257b9379.js"
       crossorigin="anonymous"
     ></script>
-    <link rel="stylesheet" href="./problem.css" />
+    <link rel="stylesheet" href="../css/problem.css" />
     <title>Health Problems</title>
   </head>
   <body>
@@ -40,16 +40,30 @@
             "Plague",
             "Smallpox",
             "Yellow Fever",
-            "Zika Virus",
+            "Zika Virus"
           );
 
           var sites = new Array(
             "https://www.cdc.gov/diabetes/basics/diabetes.html",
             "https://www.cdc.gov/tobacco/campaign/tips/diseases/depression-anxiety.html",
             "https://www.healthline.com/health/anxiety-symptoms",
-
-            //TODO
-            
+            "https://my.clevelandclinic.org/health/diseases/5019-yeast-infections",
+            "https://www.who.int/news-room/fact-sheets/detail/malaria",
+            "https://www.who.int/news-room/fact-sheets/detail/typhoid",
+            "https://www.who.int/health-topics/hiv-aids#tab=tab_1",
+            "https://www.who.int/news-room/fact-sheets/detail/pneumonia",
+            "https://www.medicinenet.com/bronchitis_acute/article.htm",
+            "https://www.who.int/health-topics/hepatitis#tab=tab_1",
+            "https://www.medicalnewstoday.com/articles/165749#risk-factors",
+            "https://www.who.int/health-topics/cholera#tab=tab_1",
+            "https://www.who.int/news-room/fact-sheets/detail/chikungunya",
+            "https://www.who.int/news-room/fact-sheets/detail/ebola-virus-disease",
+            "https://my.clevelandclinic.org/health/diseases/4335-influenza-flu",
+            "https://www.who.int/health-topics/coronavirus#tab=tab_1",
+            "https://www.who.int/news-room/fact-sheets/detail/plague",
+            "https://www.who.int/health-topics/smallpox#tab=tab_1",
+            "https://www.mayoclinic.org/diseases-conditions/yellow-fever/symptoms-causes/syc-20353045",
+            "https://www.who.int/news-room/fact-sheets/detail/zika-virus"
           );
           for (var hi = 0; hi < problems.length; hi++)
             document.write(
@@ -63,6 +77,6 @@
       </section>
     </div>
 
-    <script src="script.js"></script>
+    <script src="../js/script.js"></script>
   </body>
 </html>
