--- a/html/index.html
+++ b/html/index.html
@@ -2,8 +2,8 @@
 <html>
   <head>
     <title>Place Search Pagination</title>
-    <link rel="stylesheet" type="text/css" href="./styles.css" />
-    <script src="./script.js"></script>
+    <link rel="stylesheet" type="text/css" href="../css/styles.css" />
+    <script src="../js/script.js"></script>
   </head>
   <body>
     <div id="map"></div>
