--- a/home.html
+++ b/home.html
@@ -55,6 +55,6 @@
 </div>
 </div>
  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="../js/transition.js"></script>
+    <script src="../js/transitions.js"></script>
 </body>
 </html>
