--- a/home.html
+++ b/home.html
@@ -11,7 +11,9 @@
   <div class="menu">
     <a href="#top"><button class="btns">HOME</button></a>
     <a href="#bottom"><button class="btns">ABOUT US</button></a>
-    <button class="btns">NEED HELP ?</button>
+    <a href="../html/Help_page.html">
+      <button class="btns">NEED HELP ?</button>
+    </a>
   </div>
   <div class="messge">
     <h3>Need Help With Your Health ?</h3>
@@ -19,7 +21,9 @@
     <hr>
     <br>
     <p align="center">
-      <button>Let Us Guide</button>
+      <a href="../html/Help_page.html">
+        <button>Let Us Guide</button>
+      </a>
     </p>
   </div>
 </div>
