--- a/html/Help_page.html
+++ b/html/Help_page.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Help Page</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../css/style.css">
 
 </head>
 
@@ -20,7 +20,7 @@
             </form>
           </div>
         <span class="divider"></span>
-        <a href="form.html">
+        <a href="../html/problems.html">
             <button class="btn-2">Choice 2</button>
         </a>
 
