--- a/html/problems.html
+++ b/html/problems.html
@@ -36,7 +36,7 @@
             "Chikungunya",
             "Ebola Virus",
             "Influenza",
-            "Novel Coronavirus (COVID-2019)",
+            "COVID-2019",
             "Plague",
             "Smallpox",
             "Yellow Fever",
@@ -74,6 +74,10 @@
                 "</a>"
             );
         </script>
+
+        <a href="../home.html" class="back-to-home">Back to Home
+          <br>
+          <i class="fas fa-chevron-circle-left fa-2x"></i></a>
       </section>
     </div>
 
