--- a/home.html
+++ b/home.html
@@ -11,8 +11,8 @@
   <div class="menu">
     <a href="#top"><button class="btns">HOME</button></a>
     <a href="#bottom"><button class="btns">ABOUT US</button></a>
-    <a href="../html/Help_page.html">
-      <button class="btns">NEED HELP ?</button>
+    <a href="../html/problems.html">
+      <button class="btns">BROWSE</button>
     </a>
   </div>
   <div class="messge">
@@ -21,8 +21,8 @@
     <hr>
     <br>
     <p align="center">
-      <a href="../html/Help_page.html">
-        <button>Let Us Guide</button>
+      <a href="../html/problems.html">
+        <button class="browse-button-main">Browse Health Problems</button> 
       </a>
     </p>
   </div>
@@ -31,12 +31,12 @@
   <a href="#aboutus"></a>
   <p>
     <article class="definition">
+      <h3>About Us</h3>
+      <br>
       <p>
         This website is created as project for Innovision 2021.
-        Our website is based on the healthcare track theme. This site can be used to locate any nearby
-        medical facilities such as hospitals, clinics, pathology labs, etc. This is created to easily
-        locate the medical help without going through all the fuss of searching and filtering from users
-        end. This site also shows data of Covid-19 cases, vaccines, available beds and other such details.
+        Our website is based on the healthcare track theme. This is created to easily locate the medical help without going through all the fuss of searching and filtering from users
+        end. 
       </p>
     </article>
   </p>
