--- a/home.html
+++ b/home.html
@@ -44,7 +44,7 @@
     <footer>
     <p align="center"><u>Team - Noob Coders</u></p>
     <p>
-      Soumyadeep Pradhan (Team Leader)
+      Soumyadeep Pradhan
     </p>
     <p>
       Aditya Raj Singh
