--- a/home.html
+++ b/home.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
-<title>Be Healthy Homepage</title>
+<title>Be Healthy</title>
 <meta charset="UTF-8">
 <link rel="stylesheet" type="text/css" href="../css/homepage.css">
+<link rel="icon" href="../imgs/icon.ico">
 <body>
 <div class="bgimg" id="top">
   <div class="icn">
@@ -42,7 +43,7 @@
   </p>
   <div class="detail">
     <footer>
-    <p align="center"><u>Team - Noob Coders</u></p>
+    <p align="center"><u>Team Name- NoobCoders</u></p>
     <p>
       Soumyadeep Pradhan
     </p>
