--- a/html/problems.html
+++ b/html/problems.html
@@ -9,6 +9,7 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="../css/problem.css" />
+    <link rel="icon" href="../imgs/icon.ico">
     <title>Health Problems</title>
   </head>
   <body>
